--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>The Ball Game</h1>
-    <div onclick="onBallClick()" class="ball">100</div>
+    <div onclick="onBallClick(this)" class="ball">100</div>
 
 <script src="js/main.js"></script>
 </body>
